--- a/IGME 202 WebGL Sample/Packages/manifest.json
+++ b/IGME 202 WebGL Sample/Packages/manifest.json
@@ -1,9 +1,9 @@
 {
   "dependencies": {
+    "com.igme202.fpscontroller": "https://github.com/brennan-igm/igme202-FPSController.git",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.1",
-    "com.unity.inputsystem": "1.0.0",
     "com.unity.test-framework": "1.1.14",
     "com.unity.textmeshpro": "2.1.1",
     "com.unity.timeline": "1.2.15",
