--- a/IGME 202 WebGL Sample/Packages/manifest.json
+++ b/IGME 202 WebGL Sample/Packages/manifest.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
-    "com.igme202.fpscontroller": "https://github.com/brennan-igm/igme202-FPSController.git",
-    "com.unity.cinemachine": "2.6.9",
-    "com.unity.ide.visualstudio": "2.0.9",
+    "com.unity.2d.pixel-perfect": "4.0.1",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.ide.visualstudio": "2.0.11",
+    "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.2",
-    "com.unity.test-framework": "1.1.27",
+    "com.unity.test-framework": "1.1.29",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
