--- a/IGME 202 WebGL Sample/Packages/manifest.json
+++ b/IGME 202 WebGL Sample/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.cinemachine": "2.6.9",
     "com.unity.ide.visualstudio": "2.0.11",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.inputsystem": "1.0.2",
